<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg" >

    <LinearLayout
        android:id="@+id/ll_game_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/ll_main_score"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/gray_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_game_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_game_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_main_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ll_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/height_8"
                    android:background="@drawable/btn_main"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:orientation="vertical"
                    android:padding="@dimen/height_4" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/game_score"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_highest_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_main"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:orientation="vertical"
                    android:padding="@dimen/height_4"
                    android:textColor="@color/white" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/game_best_score"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_highest_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <com.threehalf.howfast.view.MyProgressView
                android:id="@+id/pv_time"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/btn_restart" />

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_restartt"
                android:gravity="center"
                android:padding="@dimen/height_8"
                android:text="@string/game_start"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <AbsoluteLayout
        android:id="@+id/layout_nums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_game_top"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" >
    </AbsoluteLayout>

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textColor="@color/gray_text" />

</RelativeLayout>